--- a/index.html
+++ b/index.html
@@ -3,100 +3,76 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>cpp_download</title>
+	<title>Cpp_download</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<style>
-		*{
-			margin: 0px;
-			padding: 0px;
-			font-family: "poppins", sans-serif;
+		*{padding: 0px; margin: 0px; box-sizing: border-box;}
+		section{height: 100vh; width: 100%; background: white; display: grid; grid-template-rows: 1fr 3fr 3fr; grid-template-columns: 1fr;}
+		section>div:first-child{
+			grid-area: 1/1/2/2;
+			justify-self: center;
+			align-self: center;
+			font-size: 1.7em;
+			font-family: 'poppins', sans-serif;
 		}
-		section{
-			height: 100vh;
-			width: 100%;
-			display: grid;
-			place-content: center;
-		}
-		.mockup{
-			height: 80vh;
-			aspect-ratio: 9/16;
-			border-radius: 20px;
-			border: 5px solid black;
-			display: grid;
-			grid-template-columns: 1fr;
-			grid-template-rows: 2fr 2fr 2fr;
-		}
-		.mockup>div:first-child{
-			font-size: 20px;
-			grid-area: 1/ 1/ 2/ 2;
+		section>input{
+			grid-area: 2/1/3/2;
 			align-self: center;
 			justify-self: center;
-			font-size: 1.8em;
-			text-align: center;
-		}
-		.mockup>div:nth-child(2){
-			align-self: center;
-			justify-self: center;
-			display: flex;
-			gap: 20px;
-			flex-direction: column;
-		}
-		.mockup>div>input{
-			height: 30px;
-			width: 100%;
-			border-radius: 5px;
+			height: 40px;
+			width: 200px;
 			text-indent: 10px;
+			border-radius: 8px;
 		}
-		button{
-			height: 30px;
-			width: 100px;
-			align-self: flex-start;
+		section>div#greet{
+			grid-area: 2/1/3/2;
+			align-self: flex-end;
 			justify-self: center;
-			background: transparent;
-			border-radius: 5px;
+			font-family: 'poppins', sans-serif;
+			font-size: 1.5em;
 		}
-		button>a{text-decoration: none;color: black;}
+		section>button{
+			grid-area: 3/1/4/2;
+			align-self: center;
+			justify-self: center;
+			height: 40px;
+			width: 150px;
+			background: transparent;
+			border-radius: 20px;
+			border: 4px solid black;
+			font-size: 1.2em;
+			display: none;
+		}
+		#btn>a{color: #000; text-decoration: none;}
 	</style>
 </head>
 <body>
 	<section>
-		<div class="mockup">
-			<div>OS Practical Downlaod</div>
-			<div>
-				<input type="number" name="roll no." placeholder="Enter roll no." onchange="wish()" id="roll">
-				<div id="wish"></div>
-			</div>
-			<button id="Download"></button>
-		</div>
+		<div>OS_PRACTICAL_DOWNLOAD</div>
+		<input type="number" name="roll no." placeholder="Enter Roll. No." onchange="down()" id="roll">
+		<div id="greet"></div>
+		<button id='btn'><button>
 	</section>
 	<script>
-		apple = 
-		{'81': 'Anjali',
-		 '90': 'Doraemon',
-		 '114': 'Voneeta', 
-		 '115': 'Vivek', 
-		 '118': 'Naman', 
-		 '132': 'Punit', 
-		 '151': 'Rahul', 
-		 '142': 'Sahil',}
-		 links = 
-		 {'81' : 'https://drive.google.com/file/d/1BsYASCcHMiWAS7nXsR-eFBGe4mE_HR2n/view?usp=sharing',
-		 '90' : 'https://drive.google.com/file/d/1_fh_EYhItYJM1kLHYfqQIA_zRT2PPsVh/view?usp=sharing',
-		 '114' : 'https://drive.google.com/file/d/1Y67_PqjumS-5gYl67qA9BH2wC0Z7m3dY/view?usp=sharing',
-		 '115' : 'https://drive.google.com/file/d/1wkdaHgvrXu_i0pYdG8PsVOyv5lEUoy9q/view?usp=sharing',
-		 '118' : 'https://drive.google.com/file/d/1dfZ0plp8iaXfXlP3pMicRZ6YWF6gpMEO/view?usp=sharing',
-		 '132' : 'https://drive.google.com/file/d/1MKKpU6qEUaGOflAy6vIuifwZvYDRcEcu/view?usp=sharing',
-		 '142' : 'https://drive.google.com/file/d/1HAm7bD2NWkloVCovr4134aNFsAoQ-Q5O/view?usp=sharing',
-		 '151' : 'https://drive.google.com/file/d/1dXZtwbDfKjCelwH2E98xofqAnyDxYjYZ/view?usp=sharing',
-		 }
-		function wish(){
-			let num = document.getElementById('roll').value;
-			if (apple[num]){text = 'Hi ' + apple[num] + '!';}
-			else {text = 'wrong entered';}
-			document.getElementById('wish').innerHTML = text;
-			document.getElementById('Download').innerHTML = `<a href="${links[num]}">Donwload</a>`;
+		names = {
+			'81' : 'Anjali',
+			'90' : 'Doraemon',
+			'114' : 'Voneeta',
+			'115' : 'Vivek',
+			'118' : 'Naman',
+			'132' : 'Punit',
+			'142' : 'Sahil',
+			'151' : 'Rahul',
+		}
+		function down(){
+			roll = (document.getElementById('roll').value);
+			cur_name = names[roll];
+			but = document.getElementById('btn');
+			gree = document.getElementById('greet');
+			if(cur_name){gree.innerHTML = 'Hi '+cur_name + '!'; but.style.display = 'block'; but.innerHTML = `<a href="os\\${roll}.pdf">Download<a>`}
+			else {gree.innerHTML = 'No record'}
 		}
 	</script>
 </body>
